Fixed wrapping of text around GO-CAM docs images
Refs pombase/pombase-gocam#75
Refs pombase/website#2337

--- a/src/app/gocam-connections/gocam-connections.component.css
+++ b/src/app/gocam-connections/gocam-connections.component.css
@@ -35,11 +35,3 @@
 .project-scope {
   padding: 0.3em 0 0.1em 0;
 }
-
-.image-flex {
-  display: flex;
-}
-
-.image-flex img {
-  align-self: flex-start;
-}
