--- a/src/styles.css
+++ b/src/styles.css
@@ -670,6 +670,14 @@ details {
   margin: 1em 0.5em;
 }
 
+.docs-image-flex {
+  display: flex;
+}
+
+.docs-image-flex img {
+  align-self: flex-start;
+}
+
 .docs-colour-block {
   width: 4em;
   height: 1em;
@@ -694,13 +702,6 @@ table.data-table tr:nth-child(odd) {
   background-color: #f3f3fa;
 }
 
-img.docs-left-float {
-  float: left;
-  width: 20%;
-  max-width: 150px;
-  margin: 0.5em 1.5em 1em 0 !important;
-}
-
-.clear-float {
-  clear: both;
+.docs-image-flex img {
+  margin: 0.5em 2em 1em 0 !important;
 }
